# digitclassifier

./: .gitignore  CMakeLists.txt  README.md
H/: ActivationFunc.h  ActivationFuncTable.h  Canvas.h  CostFunc.h  CrossEntropyFunc.h  DigitDrawer.h  EigenFileIO.h  Layer.h  LossFunc.h  LossFuncTable.h  MNISTLoader.h  MSEFunc.h  NeuralNetwork.h  Optimizer.h  ReLUFunc.h  SGD.h  SigmoidFunc.h  SoftmaxFunc.h  TanhFunc.h  TrainingInfo.h
res/NNsaves/: 15sigmoid_10sigmoid_mse  15tanh_10sigmoid_mse  16sigmoid_16sigmoid_10sigmoid_mse  default
src/: Canvas.cpp  CostFunc.cpp  CrossEntropyFunc.cpp  DigitDrawer.cpp  EigenFileIO.cpp  Layer.cpp  MNISTLoader.cpp  MSEFunc.cpp  NeuralNetwork.cpp  Optimizer.cpp  ReLUFunc.cpp  SGD.cpp  SigmoidFunc.cpp  SoftmaxFunc.cpp  TanhFunc.cpp  main.cpp
